[gd_scene load_steps=8 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://player/Camera.gd" type="Script" id=2]
[ext_resource path="res://weapons/WeaponsManager.gd" type="Script" id=3]
[ext_resource path="res://weapons/pistol/Pistol.tscn" type="PackedScene" id=4]
[ext_resource path="res://player/PlayerLight.tscn" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 0.765058, 1, 1.73351 )

[sub_resource type="Environment" id=2]


[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.79982, 0 )
script = ExtResource( 1 )
move_speed = 25.0
gravity = 15.0
acceleration = 5.0
deceleration = 5.0
max_health = 100

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7036, 0 )
environment = SubResource( 2 )
current = true
script = ExtResource( 2 )
max_rotation = 80.0

[node name="WeaponsManager" type="Spatial" parent="Camera"]
script = ExtResource( 3 )

[node name="Aim" type="RayCast" parent="Camera/WeaponsManager"]
enabled = true
cast_to = Vector3( 0, 0, -50 )

[node name="Hand" type="Spatial" parent="Camera/WeaponsManager"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.403497, -0.678123, 0.549766 )

[node name="Pistol" parent="Camera/WeaponsManager/Hand" instance=ExtResource( 4 )]
ammo = 50

[node name="PlayerLight" parent="." instance=ExtResource( 5 )]

[connection signal="weapon_changed" from="Camera/WeaponsManager" to="." method="_on_WeaponsManager_weapon_changed"]
